--- a/comment_classifier.ipynb
+++ b/comment_classifier.ipynb
@@ -358,11 +358,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "wicked-configuration",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model_3\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "input_4 (InputLayer)         [(None, 200)]             0         \n",
+      "_________________________________________________________________\n",
+      "embedding_3 (Embedding)      (None, 200, 50)           1000000   \n",
+      "_________________________________________________________________\n",
+      "bidirectional_2 (Bidirection (None, 200, 120)          53280     \n",
+      "_________________________________________________________________\n",
+      "global_max_pooling1d_3 (Glob (None, 120)               0         \n",
+      "_________________________________________________________________\n",
+      "dropout_6 (Dropout)          (None, 120)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_6 (Dense)              (None, 50)                6050      \n",
+      "_________________________________________________________________\n",
+      "dropout_7 (Dropout)          (None, 50)                0         \n",
+      "_________________________________________________________________\n",
+      "dense_7 (Dense)              (None, 6)                 306       \n",
+      "=================================================================\n",
+      "Total params: 1,059,636\n",
+      "Trainable params: 1,059,636\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "from keras import models\n",
+    "mymodel = models.load_model('comment_class_model.h5')\n",
+    "mymodel.summary()"
+   ]
   }
  ],
  "metadata": {
